--- a/notebook/532V_LLM_Eval_Gemini_with_file_req.ipynb
+++ b/notebook/532V_LLM_Eval_Gemini_with_file_req.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "WH1HUoijPK0E"
       },
@@ -11,9 +11,7 @@
         "import json\n",
         "import requests\n",
         "from google import genai\n",
-        "from google.genai import types\n",
-        "\n",
-        "client = genai.Client(api_key='AIzaSyBVmykEGkH8zT0DzMyIME6O7TFgwy2rFiI')"
+        "from google.genai import types"
       ]
     },
     {
@@ -38,8 +36,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Prompt tokens: 5\n",
             "Thinking tokens: None\n",
@@ -48,17 +46,17 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'I am a large language model, trained by Google. I don\\'t have feelings or emotions, so I can\\'t be \"good\" or \"bad\" in the way a human can.'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'I am a large language model, trained by Google. I don\\'t have feelings or emotions, so I can\\'t be \"good\" or \"bad\" in the way a human can.'"
+            ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -102,8 +100,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Prompt tokens: 5174\n",
             "Thinking tokens: None\n",
@@ -112,17 +110,17 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'This scoping review explores the use of digital health technologies (DHTs) for stroke rehabilitation in Canada between 2010 and 2022. The review identified 14 studies that primarily focused on upper extremity function in the chronic phase of stroke, utilizing technologies like virtual reality, gaming systems, and mobile/sensor-based training. While these technologies show promise in improving patient outcomes and have demonstrated feasibility, barriers to adoption include technical challenges, user inexperience, and cost. The findings suggest that Canadian research needs to broaden its scope to include other outcomes like cognition and lower extremity function, and investigate DHTs in earlier stages of stroke recovery. Future research and policy decisions should consider these gaps and focus on integrating DHTs into clinical practice to enhance stroke rehabilitation services.'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'This scoping review explores the use of digital health technologies (DHTs) for stroke rehabilitation in Canada between 2010 and 2022. The review identified 14 studies that primarily focused on upper extremity function in the chronic phase of stroke, utilizing technologies like virtual reality, gaming systems, and mobile/sensor-based training. While these technologies show promise in improving patient outcomes and have demonstrated feasibility, barriers to adoption include technical challenges, user inexperience, and cost. The findings suggest that Canadian research needs to broaden its scope to include other outcomes like cognition and lower extremity function, and investigate DHTs in earlier stages of stroke recovery. Future research and policy decisions should consider these gaps and focus on integrating DHTs into clinical practice to enhance stroke rehabilitation services.'"
+            ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
