Added some documentation to functions in notebook

--- a/notebook/532V_LLM_Eval_Gemini_with_file_req.ipynb
+++ b/notebook/532V_LLM_Eval_Gemini_with_file_req.ipynb
@@ -29,47 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        },
-        "id": "kaKBRrpHYyXf",
-        "outputId": "1c2a1caf-edc4-4d9d-d99f-5d5ea987608a"
-      },
-      "outputs": [],
-      "source": [
-        "def send_request(prompt, max_tokens):\n",
-        "    try:\n",
-        "        response = client.models.generate_content(\n",
-        "            model='gemini-2.5-flash-lite', # or gemini-2.5-flash\n",
-        "            contents=[prompt],\n",
-        "            config={\n",
-        "                'max_output_tokens': max_tokens,\n",
-        "                'temperature': 1.0,\n",
-        "                'thinking_config': {\n",
-        "                    'include_thoughts': True, # Set to True if you want to see the reasoning\n",
-        "                    'thinking_budget': 0   # Minimum budget is 0 if we don't use a thinking model\n",
-        "                }\n",
-        "            },\n",
-        "        )\n",
-        "        if response:\n",
-        "            print(f\"Prompt tokens: {response.usage_metadata.prompt_token_count}\")\n",
-        "            print(f\"Thinking tokens: {response.usage_metadata.thoughts_token_count}\") # <--- This one\n",
-        "            print(f\"Output tokens (Answer): {response.usage_metadata.candidates_token_count}\")\n",
-        "            print(f\"Total tokens used: {response.usage_metadata.total_token_count}\")\n",
-        "            return response.text\n",
-        "    except Exception as e:\n",
-        "        print(e)\n",
-        "    return ''\n",
-        "\n",
-        "# send_request(prompt=\"How are you?\", max_tokens=40)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -78,21 +38,19 @@
         "id": "IEFVmpIT49s7",
         "outputId": "e6ee3782-dd9e-4d89-f3a2-67c6d2241c96"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Prompt tokens: 2859\n",
-            "Thinking tokens: None\n",
-            "Output tokens (Answer): 972\n",
-            "Total tokens used: 3831\n",
-            "Outputted to: ../judge_results/results_anthropic_short/test2.txt\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def submit_pdf_file_request(prompt, pdf_path, max_tokens):\n",
+        "    \"\"\"This function submits a request to Gemini with a PDF file.\n",
+        "\n",
+        "    Args:\n",
+        "        prompt (str): the prompt to give Gemini\n",
+        "        pdf_path (str): the path to the PDF file\n",
+        "        max_tokens (str): the maximum number of tokens\n",
+        "\n",
+        "    Returns:\n",
+        "        str: Gemini's output response text \n",
+        "    \"\"\"\n",
         "    try:\n",
         "        with open(pdf_path, \"rb\") as pdf_file:\n",
         "          pdf_file_bytes = pdf_file.read()\n",
@@ -118,36 +76,33 @@
         "    return ''\n",
         "\n",
         "def save_response_text(text, output_path):\n",
+        "    \"\"\"This function saves the response text to the specified file.\n",
+        "\n",
+        "    Args:\n",
+        "        text (str): the text to save to a file\n",
+        "        output_path (str): the output path for the text to be saved\n",
+        "    \"\"\"\n",
         "    with open(output_path, \"w\") as text_output_file:\n",
         "        text_output_file.write(text)\n",
         "        print(f\"Outputted to: {output_path}\")\n",
         "\n",
         "\n",
         "# Can change inputs here\n",
-        "prompt=\"Can you provide a summary of this article's important points in less than 1 document page?\"\n",
-        "# pdf_path=\"//Digital_Health_in_Stroke_Rehab.pdf\"\n",
-        "pdf_path=\"../input_docs/Exoskeletons_Stroke.pdf\"\n",
+        "prompt=\"Can you provide a summary of this article in 5 sentences?\"\n",
         "\n",
         "input_folder_path = \"../input_docs\"\n",
-        "output_folder_path = \"../results/results_gemini_long\"\n",
+        "output_folder_path = \"../results/results_gemini\"\n",
         "\n",
-        "# function to send file to Gemini\n",
-        "response_text = submit_pdf_file_request(prompt=prompt, pdf_path=pdf_path, max_tokens=100)\n",
-        "\n",
-        "output_path = \"../judge_results/results_anthropic_short/test2.txt\"\n",
-        "save_response_text(response_text, output_path)\n",
         "os.makedirs(output_folder_path, exist_ok=True)\n",
         "\n",
-        "# for doc in os.listdir(input_folder_path):\n",
-        "#     doc_root, doc_ext = os.path.splitext(doc)\n",
+        "for doc in os.listdir(input_folder_path):\n",
+        "    doc_root, doc_ext = os.path.splitext(doc)\n",
         "    \n",
-        "#     doc_path = f\"{input_folder_path}/{doc}\"\n",
-        "#     output_path = f\"{output_folder_path}/{doc_root}.txt\"\n",
-        "    \n",
-        "#     print(output_path)\n",
-        "    \n",
-        "#     response_text = submit_pdf_file_request(prompt=prompt, pdf_path=doc_path, max_tokens=500)\n",
-        "#     save_response_text(response_text, output_path)"
+        "    doc_path = f\"{input_folder_path}/{doc}\"\n",
+        "    output_path = f\"{output_folder_path}/{doc_root}.txt\"\n",
+        "        \n",
+        "    response_text = submit_pdf_file_request(prompt=prompt, pdf_path=doc_path, max_tokens=500)\n",
+        "    save_response_text(response_text, output_path)"
       ]
     },
     {
@@ -164,19 +119,25 @@
       "outputs": [],
       "source": [
         "def judge_summary_request(prompt, pdf_path, summary_text_path, max_tokens):\n",
+        "    \"\"\"This function submits a request to Gemini with a PDF file for the purposes of judging a summary's quality.\n",
+        "\n",
+        "    Args:\n",
+        "        prompt (str): the prompt to give Gemini\n",
+        "        pdf_path (str): the path to the PDF file\n",
+        "        summary_text_path (str): the path to the generated summary\n",
+        "        max_tokens (str): the maximum number of tokens\n",
+        "\n",
+        "    Returns:\n",
+        "        str: Gemini's output response text \n",
+        "    \"\"\"\n",
         "    try:\n",
         "        with open(pdf_path, \"rb\") as pdf_file:\n",
         "          pdf_file_bytes = pdf_file.read()\n",
         "          \n",
         "        with open(summary_text_path, \"r\") as summary_text_file:\n",
         "            summary_text = summary_text_file.read()\n",
-        "            # print(\"Summary:\")\n",
-        "            # print(summary_text)\n",
-        "            # print()\n",
         "            \n",
         "        updated_prompt = f\"{prompt} \\n\\n**Here's the provided summary to evaluate:\\n {summary_text}\" \n",
-        "        # print(\"updated prompt:\")\n",
-        "        # print(updated_prompt)\n",
         "\n",
         "        response = client.models.generate_content(\n",
         "            model='gemini-2.5-flash-lite', # or gemini-2.5-flash\n",
@@ -200,6 +161,12 @@
         "\n",
         "\n",
         "def save_response_json(text, output_path):\n",
+        "    \"\"\"This function saves the response text as a json file.\n",
+        "\n",
+        "    Args:\n",
+        "        text (str): the text, formatted as a JSON dictionary\n",
+        "        output_path (str): the output JSON path to save the text to\n",
+        "    \"\"\"\n",
         "    \n",
         "    with open(output_path, \"w\") as json_output_file:            \n",
         "        json.dump(text)\n",
@@ -209,7 +176,7 @@
         "prompt_path = \"../llm_judge_prompts/judge_basic.txt\"\n",
         "input_folder_path = \"../input_docs\"\n",
         "\n",
-        "output_folder_path = \"../judge_results\"\n",
+        "output_folder_path = \"../gemini_judge_results_basic\"\n",
         "os.makedirs(output_folder_path, exist_ok=True)\n",
         "\n",
         "summary_folder = \"../results\""
@@ -3657,10 +3624,10 @@
         }
       ],
       "source": [
+        "# this cell is for judging summaries with Gemini\n",
+        "\n",
         "with open(prompt_path, \"r\") as prompt_file:\n",
         "    prompt = prompt_file.read()\n",
-        "\n",
-        "i = 0\n",
         "\n",
         "for results_folder in os.listdir(summary_folder):\n",
         "    \n",
@@ -3682,11 +3649,6 @@
         "        elif \"_result\" in summary_root:\n",
         "            summary_root = summary_root.replace(\"_result\", \"\")\n",
         "        \n",
-        "        # if i > 5:\n",
-        "        #     break\n",
-        "        \n",
-        "        print(summary_file_path)\n",
-        "        \n",
         "        try:\n",
         "            pdf_path = f\"{input_folder_path}/{summary_root}.pdf\"\n",
         "            output_evaluation_path = f\"{output_evaluation_folder}/{summary_root}.json\"\n",
@@ -3704,15 +3666,10 @@
         "            print()\n",
         "            save_response_text(judge_response, output_evaluation_path)\n",
         "\n",
-        "            # i = i + 1\n",
         "            \n",
         "        except:\n",
         "            print(f\"Error with: {summary_file_path}\")\n",
-        "            continue\n",
-        "\n",
-        "    # if i > 5:\n",
-        "    #     break\n",
-        "\n"
+        "            continue\n"
       ]
     },
     {
@@ -11258,7 +11215,7 @@
         }
       ],
       "source": [
-        "# this one is for perturbations\n",
+        "# this one is for judging perturbations with Gemini\n",
         "\n",
         "summary_folder = \"../perturbations\"\n",
         "output_folder_path = \"../judge_results\"\n",
