remove gemini api key

--- a/notebook/532V_LLM_Eval_Gemini_with_file_req.ipynb
+++ b/notebook/532V_LLM_Eval_Gemini_with_file_req.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "WH1HUoijPK0E"
       },
@@ -12,10 +12,14 @@
         "import requests\n",
         "from google import genai\n",
         "from google.genai import types\n",
+        "from dotenv import load_dotenv\n",
         "\n",
         "import os\n",
         "\n",
-        "client = genai.Client(api_key='AIzaSyApwRUuoPUL9gSfCWEIyI0jcGJXDmFUCzQ')"
+        "load_dotenv()\n",
+        "\n",
+        "api_key = os.getenv(\"GEMINI_API_KEY\")\n",
+        "client = genai.Client(api_key=api_key)"
       ]
     },
     {
